<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_titulo"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/editText_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_Clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_clave"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/btn_aceptar"
        android:textColor="@android:color/background_light" />
</LinearLayout>