<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#E91E63"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@color/colorPrimary"
        android:onClick="onClickNavegadorWeb"
        android:text="@string/btn_navegador_web"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@color/colorPrimary"
        android:onClick="onClickLlamarTelefono"
        android:text="@string/btn_llamar"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onClickMostrar"
        android:text="@string/btn_mostrar"
        android:textColor="@android:color/background_light" />
</LinearLayout>